feat(TestOutput): more simple TestOutput